--- a/app/src/main/res/layout/activity_step8.xml
+++ b/app/src/main/res/layout/activity_step8.xml
@@ -24,11 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="180dp">
         <androidx.constraintlayout.motion.widget.MotionLayout
-                android:id="@+id/motion_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layoutDescription="@xml/step8"
-                app:motionDebug="SHOW_PATH" >
+            android:id="@+id/motion_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutDescription="@xml/step8"
+            app:motionDebug="SHOW_PATH"
+            android:minHeight="80dp"
+            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"  >
 
             <ImageView
                     android:id="@+id/background"
@@ -41,7 +43,6 @@
                     app:srcCompat="@drawable/background"
                     android:scaleType="centerCrop"
             />
-
 
             <ImageView
                     android:id="@+id/moon"
