--- a/app/src/main/res/xml/step7.xml
+++ b/app/src/main/res/xml/step7.xml
@@ -26,41 +26,42 @@
 
         <!-- Fix OnSwipe by changing touchAnchorSide -->
         <OnSwipe
-                app:touchAnchorId="@id/moon"
-                app:touchAnchorSide="bottom"
+            app:touchAnchorId="@id/moon"
+            app:touchAnchorSide="right"
+            app:dragDirection="dragRight"
         />
 
 
         <KeyFrameSet>
             <KeyPosition
-                    app:framePosition="25"
-                    app:motionTarget="@id/moon"
-                    app:keyPositionType="parentRelative"
-                    app:percentY="0.6"
+                app:framePosition="25"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.6"
             />
             <KeyPosition
-                    app:framePosition="50"
-                    app:motionTarget="@id/moon"
-                    app:keyPositionType="parentRelative"
-                    app:percentY="0.5"
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.5"
             />
             <KeyPosition
-                    app:framePosition="75"
-                    app:motionTarget="@id/moon"
-                    app:keyPositionType="parentRelative"
-                    app:percentY="0.6"
+                app:framePosition="75"
+                app:motionTarget="@id/moon"
+                app:keyPositionType="parentRelative"
+                app:percentY="0.6"
             />
             <KeyAttribute
-                    app:framePosition="50"
-                    app:motionTarget="@id/moon"
-                    android:scaleY="2.0"
-                    android:scaleX="2.0"
-                    android:rotation="-360"
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                android:scaleY="2.0"
+                android:scaleX="2.0"
+                android:rotation="-360"
             />
             <KeyAttribute
-                    app:framePosition="100"
-                    app:motionTarget="@id/moon"
-                    android:rotation="-720"
+                app:framePosition="100"
+                app:motionTarget="@id/moon"
+                android:rotation="-720"
             />
             <KeyAttribute
                     app:framePosition="0"
